--- a/index.html
+++ b/index.html
@@ -5,47 +5,57 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>UDP Programme Comms Dashboard</title>
 
-  <!-- Frappe Gantt -->
+  <!-- Frappe Gantt (browser UMD build) -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/frappe-gantt@0.5.0/dist/frappe-gantt.css" />
   <script src="https://cdn.jsdelivr.net/npm/frappe-gantt@0.5.0/dist/frappe-gantt.min.js"></script>
 
-  <!-- Supabase -->
+  <!-- Supabase JS v2 -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
   <style>
     :root{
       --bg:#ffffff; --ink:#0f172a; --muted:#64748b; --line:#e2e8f0;
-      --ash:#e2e8f0; --beige:#f3e8d7; --red:#ef4444; --live:#22c55e;
+      --ash:#e2e8f0;              /* Not started */
+      --beige:#f3e8d7;            /* In progress */
+      --red:#ef4444;              /* Done (100%) */
+      --live:#22c55e;
     }
     html,body{height:100%;margin:0}
-    body{font:14px system-ui, sans-serif;color:var(--ink);background:var(--bg);}
+    body{font:14px system-ui, -apple-system, Segoe UI, Roboto, Helvetica Neue, Arial;color:var(--ink);background:var(--bg)}
 
-    .app{display:flex;flex-direction:column;height:100vh}
+    .app{display:flex;flex-direction:column;min-height:100vh}
 
     header{display:flex;justify-content:space-between;align-items:center;
-      padding:10px 20px;border-bottom:1px solid var(--line);background:#fff;}
+      padding:10px 20px;border-bottom:1px solid var(--line);background:#fff}
     .brand{display:flex;gap:8px;align-items:center}
     .live{width:10px;height:10px;border-radius:50%;background:var(--live);
       box-shadow:0 0 0 6px rgba(34,197,94,.15);animation:pulse 2s infinite}
     @keyframes pulse{0%{box-shadow:0 0 0 0 rgba(34,197,94,.4)}70%{box-shadow:0 0 0 12px rgba(34,197,94,0)}100%{box-shadow:0 0 0 0 rgba(34,197,94,0)}}
-
     .controls{display:flex;gap:8px}
-    .controls>*{padding:6px 12px;border:1px solid var(--line);border-radius:6px;background:#fff;cursor:pointer}
+    .controls>*{padding:6px 12px;border:1px solid var(--line);border-radius:8px;background:#fff;cursor:pointer}
 
-    main{flex:1;display:flex;flex-direction:column}
-    #gantt{flex:1;overflow-x:auto;overflow-y:hidden; /* keep scrollbar bottom */
-      border:1px solid var(--line);border-radius:8px;background:#fff}
+    main{flex:1;display:flex;flex-direction:column;gap:10px;padding:12px}
+    /* KEY: no flex on #gantt; height is set to SVG height via JS so
+       the horizontal scrollbar is exactly at the bottom edge. */
+    #gantt{
+      height:auto;               /* JS sets exact px height after render */
+      border:1px solid var(--line);border-radius:10px;background:#fff;
+      overflow-x:auto;           /* show only bottom horizontal bar */
+      overflow-y:hidden;         /* hide vertical scroll */
+    }
 
-    .legend{margin:8px 12px;display:flex;gap:16px;font-size:13px;color:var(--muted)}
-    .legend span{display:flex;align-items:center;gap:5px}
-    .sw{width:12px;height:12px;border-radius:3px;border:1px solid var(--line)}
+    .legend{display:flex;gap:16px;align-items:center;font-size:13px;color:var(--muted);padding:0 4px}
+    .legend .sw{width:12px;height:12px;border-radius:3px;border:1px solid var(--line);display:inline-block;margin-right:6px}
 
-    /* Gantt tweaks */
-    .gantt .grid-row:nth-child(even){fill:#fafafa}
-    .gantt .bar-label{fill:var(--ink);font-weight:600;font-size:12px}
+    /* Light theme tweaks */
+    .gantt .grid-row:nth-child(even){fill:#f8fafc}
+    .gantt .lower-text,.gantt .upper-text,.gantt .bar-label{fill:#0f172a;font-weight:600}
+
+    /* default palette for bars; we'll override with inline styles in JS when needed */
     .gantt .bar{fill:var(--ash)}
-    .gantt .bar-progress{fill:var(--beige);transition:width .6s}
-    .progress-edge{stroke:#b4a89a;stroke-width:1}
+    .gantt .bar-progress{fill:var(--beige);transition:width .6s cubic-bezier(.22,.61,.36,1)}
+    .progress-edge{stroke:#b4a89a;stroke-width:1;shape-rendering:crispEdges}
+
     .hover-hit{fill:transparent;pointer-events:all}
   </style>
 </head>
@@ -55,7 +65,7 @@
     <div class="brand">
       <div class="live"></div>
       <div>
-        <div><b>UDP Programme Comms Dashboard</b></div>
+        <div style="font-weight:700">UDP Programme Comms Dashboard</div>
         <div style="font-size:12px;color:var(--muted)">Comms Focal: Abu Nayeem Md Shakib</div>
       </div>
     </div>
@@ -67,82 +77,177 @@
       <button id="refreshBtn">Refresh</button>
     </div>
   </header>
+
   <main>
     <div id="gantt"></div>
     <div class="legend">
       <span><span class="sw" style="background:var(--ash)"></span>Not started</span>
       <span><span class="sw" style="background:var(--beige)"></span>In progress</span>
-      <span><span class="sw" style="background:var(--red)"></span>Done</span>
+      <span><span class="sw" style="background:var(--red)"></span>Done (100%)</span>
     </div>
   </main>
 </div>
 
 <script>
-const SUPABASE_URL="https://wjfgntocqjtwaqamlbgc.supabase.co";
-const SUPABASE_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndqZmdudG9jcWp0d2FxYW1sYmdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzNjQzODIsImV4cCI6MjA3MDk0MDM4Mn0.IRwC5-0cv2rkaZbzR1Ovxnt6dl0m1IwJgcLl2I67YzQ";
-const supabase=window.supabase.createClient(SUPABASE_URL,SUPABASE_KEY);
+  // Supabase
+  const SUPABASE_URL="https://wjfgntocqjtwaqamlbgc.supabase.co";
+  const SUPABASE_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndqZmdudG9jcWp0d2FxYW1sYmdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzNjQzODIsImV4cCI6MjA3MDk0MDM4Mn0.IRwC5-0cv2rkaZbzR1Ovxnt6dl0m1IwJgcLl2I67YzQ";
+  const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-let gantt,lastTasks=[]; const state={view:"Week"};
+  let gantt, tasksCache = [];
+  const ganttEl = document.getElementById('gantt');
 
-init();
-async function init(){
-  await render();
-  supabase.channel("public:tasks").on("postgres_changes",{event:"*",schema:"public",table:"tasks"},()=>render()).subscribe();
-  document.getElementById("viewDay").onclick=()=>{state.view="Day";gantt.change_view_mode("Day")};
-  document.getElementById("viewWeek").onclick=()=>{state.view="Week";gantt.change_view_mode("Week")};
-  document.getElementById("viewMonth").onclick=()=>{state.view="Month";gantt.change_view_mode("Month")};
-  document.getElementById("refreshBtn").onclick=()=>render();
-}
+  init();
 
-async function render(){
-  const {data,error}=await supabase.from("tasks").select("*").order("start_date");
-  if(error){console.error(error);return}
-  const tasks=(data||[]).map(r=>({
-    id:r.id,name:r.title,start:fmt(r.start_date),end:fmt(r.end_date||r.start_date),
-    progress:Number(r.progress||0),notes:r.notes||""
-  }));
-  lastTasks=tasks;
-  document.getElementById("gantt").innerHTML="";
-  gantt=new Gantt("#gantt",tasks,{view_mode:state.view,bar_height:24,padding:20,
-    custom_popup_html:task=>`<div style="padding:8px 10px"><b>${task.name}</b><br>${task.progress}%<br>${task.notes}</div>`
-  });
-  enhance(tasks);
-}
+  async function init(){
+    buildMonthPicker();
+    await render();
+    supabase.channel("public:tasks")
+      .on("postgres_changes",{event:"*",schema:"public",table:"tasks"},debounce(render,200))
+      .subscribe();
 
-function enhance(tasks){
-  const map=Object.fromEntries(tasks.map(t=>[t.id,t]));
-  document.querySelectorAll(".bar-wrapper").forEach(w=>{
-    const id=w.getAttribute("data-id"), t=map[id];
-    const bar=w.querySelector("rect.bar"), prog=w.querySelector("rect.bar-progress");
-    if(!bar) return;
+    document.getElementById("viewDay").onclick=()=>{ if(gantt){gantt.change_view_mode("Day"); fixGanttHeight();}};
+    document.getElementById("viewWeek").onclick=()=>{ if(gantt){gantt.change_view_mode("Week"); fixGanttHeight();}};
+    document.getElementById("viewMonth").onclick=()=>{ if(gantt){gantt.change_view_mode("Month"); fixGanttHeight();}};
+    document.getElementById("refreshBtn").onclick=()=>render();
+    document.getElementById("monthSelect").onchange=()=>render();
+    window.addEventListener('resize', () => setTimeout(fixGanttHeight, 60));
+  }
 
-    // base color
-    bar.setAttribute("fill","var(--ash)");
-
-    if(prog){
-      if(t.progress>=100){
-        bar.setAttribute("fill","var(--red)");
-        prog.setAttribute("fill","var(--red)");
-        prog.setAttribute("width",bar.getAttribute("width")); // full width
-      }else if(t.progress>0){
-        prog.setAttribute("fill","var(--beige)");
-      }
-      // separator line
-      let edge=w.querySelector("line.progress-edge");
-      if(!edge){edge=document.createElementNS("http://www.w3.org/2000/svg","line");edge.setAttribute("class","progress-edge");w.appendChild(edge);}
-      const x=+bar.getAttribute("x")+ +prog.getAttribute("width"), y=+bar.getAttribute("y"), h=+bar.getAttribute("height");
-      edge.setAttribute("x1",x);edge.setAttribute("x2",x);edge.setAttribute("y1",y+1);edge.setAttribute("y2",y+h-1);
-      edge.style.display=(t.progress>0 && t.progress<100)?"block":"none";
+  function buildMonthPicker(){
+    const sel = document.getElementById('monthSelect');
+    sel.innerHTML = '';
+    const base = new Date(); base.setDate(1);
+    for(let o=-2;o<=9;o++){
+      const d=new Date(base); d.setMonth(d.getMonth()+o);
+      const opt=document.createElement('option');
+      opt.value=`${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,'0')}`;
+      opt.textContent=d.toLocaleString(undefined,{month:'long',year:'numeric'});
+      if(o===0) opt.selected=true;
+      sel.appendChild(opt);
     }
+  }
 
-    // hover
-    let hit=w.querySelector(".hover-hit"); if(!hit){hit=document.createElementNS("http://www.w3.org/2000/svg","rect");hit.setAttribute("class","hover-hit");w.appendChild(hit);}
-    ["x","y","width","height"].forEach(a=>hit.setAttribute(a,bar.getAttribute(a)));
-    let old=hit.querySelector("title");if(old)old.remove();
-    let title=document.createElementNS("http://www.w3.org/2000/svg","title");title.textContent=t.name+" — "+t.notes;hit.appendChild(title);
-  });
-}
-function fmt(d){const x=new Date(d);return x.toISOString().split("T")[0]}
+  function getMonthRange(){
+    const [y,m] = document.getElementById('monthSelect').value.split('-').map(Number);
+    return { start:new Date(y,m-1,1), end:new Date(y,m,0,23,59,59,999) };
+  }
+
+  async function fetchTasks(){
+    const { data, error } = await supabase.from('tasks').select('*').order('start_date');
+    if(error){ console.error(error); return []; }
+    const { start, end } = getMonthRange();
+    return (data||[]).filter(t=>{
+      const s=new Date(t.start_date), e=new Date(t.end_date||t.start_date);
+      return e>=start && s<=end;
+    });
+  }
+
+  async function render(){
+    const rows = await fetchTasks();
+    const tasks = rows.map(r=>({
+      id:r.id, name:r.title,
+      start:fmt(r.start_date), end:fmt(r.end_date||r.start_date),
+      progress:Number(r.progress||0),
+      notes:(r.notes ?? r.description ?? '').trim()
+    }));
+    tasksCache = tasks;
+
+    ganttEl.innerHTML = '';
+    gantt = new Gantt('#gantt', tasks, {
+      view_mode: 'Week',
+      bar_height: 24,
+      padding: 20,
+      custom_popup_html: t => `
+        <div style="background:#fff;border:1px solid var(--line);border-radius:10px;padding:10px 12px;max-width:260px">
+          <div style="font-weight:700">${escapeHtml(t.name)}</div>
+          <div style="color:#64748b;font-size:12px;margin-top:2px">${t._start.format('ll')} → ${t._end.format('ll')} · ${t.progress}%</div>
+          <div style="margin-top:6px;font-size:12px;color:#0f172a">${escapeHtml(t.notes || 'No description')}</div>
+        </div>`
+    });
+
+    styleBars(tasks);
+    fixGanttHeight(); // <- keep scrollbar at bottom
+  }
+
+  // make bars match our semantics; force 100% red using INLINE styles (beats CSS)
+  function styleBars(tasks){
+    const map = Object.fromEntries(tasks.map(t=>[String(t.id),t]));
+    document.querySelectorAll('.gantt .bar-wrapper').forEach(wrap=>{
+      const id = wrap.getAttribute('data-id');
+      const t  = map[id];
+      const bar  = wrap.querySelector('rect.bar');
+      const prog = wrap.querySelector('rect.bar-progress');
+      if(!bar) return;
+
+      // base colors
+      bar.style.fill = 'var(--ash)';
+      if(prog) prog.style.fill = 'var(--beige)';
+
+      // 100% -> turn everything red (inline style)
+      if(t && t.progress >= 100){
+        bar.style.fill  = 'var(--red)';
+        if(prog){
+          prog.style.fill = 'var(--red)';
+          prog.setAttribute('width', bar.getAttribute('width')); // full width
+        }
+      }
+
+      // separator line at progress edge (hide if 0 or 100)
+      let edge = wrap.querySelector('line.progress-edge');
+      if(!edge){
+        edge = document.createElementNS('http://www.w3.org/2000/svg','line');
+        edge.setAttribute('class','progress-edge');
+        wrap.appendChild(edge);
+      }
+      const bw = parseFloat(bar.getAttribute('width')||'0');
+      const pw = prog ? parseFloat(prog.getAttribute('width')||'0') : 0;
+      const showEdge = t && t.progress > 0 && t.progress < 100 && pw > 0;
+      if(showEdge){
+        const x = parseFloat(bar.getAttribute('x')||'0') + pw;
+        const y = parseFloat(bar.getAttribute('y')||'0');
+        const h = parseFloat(bar.getAttribute('height')||'0');
+        edge.setAttribute('x1',x); edge.setAttribute('x2',x);
+        edge.setAttribute('y1',y+1); edge.setAttribute('y2',y+h-1);
+        edge.style.display='block';
+      }else{
+        edge.style.display='none';
+      }
+
+      // full-bar hover (native tooltip + popup)
+      let hit = wrap.querySelector('rect.hover-hit');
+      if(!hit){
+        hit = document.createElementNS('http://www.w3.org/2000/svg','rect');
+        hit.setAttribute('class','hover-hit');
+        wrap.appendChild(hit);
+      }
+      ['x','y','width','height','rx','ry'].forEach(a=>{
+        const v = bar.getAttribute(a); if(v!=null) hit.setAttribute(a, v);
+      });
+      let old = hit.querySelector('title'); if(old) old.remove();
+      const ttl = document.createElementNS('http://www.w3.org/2000/svg','title');
+      ttl.textContent = t ? `${t.name}${t.notes ? ' — ' + t.notes : ''}` : '';
+      hit.appendChild(ttl);
+      hit.onmouseenter = () => { if(gantt && gantt.show_popup) gantt.show_popup(t); };
+      hit.onmouseleave = () => { if(gantt && gantt.hide_popup) gantt.hide_popup(); };
+    });
+  }
+
+  // keep the horizontal scrollbar exactly at the bottom edge
+  function fixGanttHeight(){
+    const svg = ganttEl.querySelector('svg');
+    if(!svg) return;
+    // prefer bbox height (SVG content), fallback to client height
+    let h = 0;
+    try{ h = svg.getBBox().height; }catch(e){ h = svg.getBoundingClientRect().height; }
+    // add a small cushion (for axis labels) + scrollbar track
+    ganttEl.style.height = Math.ceil(h + 40) + 'px';
+  }
+
+  // helpers
+  function fmt(d){ const x=new Date(d); return `${x.getFullYear()}-${String(x.getMonth()+1).padStart(2,'0')}-${String(x.getDate()).padStart(2,'0')}`; }
+  function debounce(fn,wait){ let t; return (...a)=>{ clearTimeout(t); t=setTimeout(()=>fn.apply(this,a),wait); }; }
+  function escapeHtml(s){ return String(s).replace(/[&<>\"']/g,c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;','\'':'&#039;'}[c])); }
 </script>
 </body>
 </html>
