--- a/index.html
+++ b/index.html
@@ -5,44 +5,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>UDP Programme Comms Dashboard</title>
 
-  <!-- Frappe Gantt (browser UMD build) -->
+  <!-- Frappe Gantt -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/frappe-gantt@0.5.0/dist/frappe-gantt.css" />
   <script src="https://cdn.jsdelivr.net/npm/frappe-gantt@0.5.0/dist/frappe-gantt.min.js"></script>
 
-  <!-- Supabase JS v2 -->
+  <!-- Supabase -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
   <style>
     :root{
       --bg:#ffffff; --ink:#0f172a; --muted:#64748b; --line:#e2e8f0;
-      --ash:#e2e8f0;              /* Not started */
-      --beige:#f3e8d7;            /* In progress */
-      --red:#ef4444;              /* Done (100%) */
+      --ash:#e2e8f0;      /* not started */
+      --beige:#f3e8d7;    /* in progress */
+      --red:#ef4444;      /* done (100%) */
       --live:#22c55e;
     }
     html,body{height:100%;margin:0}
-    body{font:14px system-ui, -apple-system, Segoe UI, Roboto, Helvetica Neue, Arial;color:var(--ink);background:var(--bg)}
+    body{font:14px system-ui,-apple-system,Segoe UI,Roboto,Helvetica Neue,Arial;color:var(--ink);background:var(--bg)}
 
-    .app{display:flex;flex-direction:column;min-height:100vh}
-
-    header{display:flex;justify-content:space-between;align-items:center;
-      padding:10px 20px;border-bottom:1px solid var(--line);background:#fff}
+    .app{min-height:100vh;display:flex;flex-direction:column}
+    header{display:flex;justify-content:space-between;align-items:center;padding:10px 20px;border-bottom:1px solid var(--line);background:#fff}
     .brand{display:flex;gap:8px;align-items:center}
-    .live{width:10px;height:10px;border-radius:50%;background:var(--live);
-      box-shadow:0 0 0 6px rgba(34,197,94,.15);animation:pulse 2s infinite}
+    .live{width:10px;height:10px;border-radius:50%;background:var(--live);box-shadow:0 0 0 6px rgba(34,197,94,.15);animation:pulse 2s infinite}
     @keyframes pulse{0%{box-shadow:0 0 0 0 rgba(34,197,94,.4)}70%{box-shadow:0 0 0 12px rgba(34,197,94,0)}100%{box-shadow:0 0 0 0 rgba(34,197,94,0)}}
     .controls{display:flex;gap:8px}
     .controls>*{padding:6px 12px;border:1px solid var(--line);border-radius:8px;background:#fff;cursor:pointer}
 
     main{flex:1;display:flex;flex-direction:column;gap:10px;padding:12px}
-    /* KEY: no flex on #gantt; height is set to SVG height via JS so
-       the horizontal scrollbar is exactly at the bottom edge. */
-    #gantt{
-      height:auto;               /* JS sets exact px height after render */
-      border:1px solid var(--line);border-radius:10px;background:#fff;
-      overflow-x:auto;           /* show only bottom horizontal bar */
-      overflow-y:hidden;         /* hide vertical scroll */
-    }
+    /* Keep the horizontal scrollbar pinned to the bottom */
+    #gantt{height:auto;border:1px solid var(--line);border-radius:10px;background:#fff;overflow-x:auto;overflow-y:hidden}
 
     .legend{display:flex;gap:16px;align-items:center;font-size:13px;color:var(--muted);padding:0 4px}
     .legend .sw{width:12px;height:12px;border-radius:3px;border:1px solid var(--line);display:inline-block;margin-right:6px}
@@ -51,11 +42,10 @@
     .gantt .grid-row:nth-child(even){fill:#f8fafc}
     .gantt .lower-text,.gantt .upper-text,.gantt .bar-label{fill:#0f172a;font-weight:600}
 
-    /* default palette for bars; we'll override with inline styles in JS when needed */
+    /* Defaults (we override with inline styles after render) */
     .gantt .bar{fill:var(--ash)}
     .gantt .bar-progress{fill:var(--beige);transition:width .6s cubic-bezier(.22,.61,.36,1)}
     .progress-edge{stroke:#b4a89a;stroke-width:1;shape-rendering:crispEdges}
-
     .hover-hit{fill:transparent;pointer-events:all}
   </style>
 </head>
@@ -70,7 +60,7 @@
       </div>
     </div>
     <div class="controls">
-      <select id="monthSelect"></select>
+      <select id="monthSelect" title="Pick month"></select>
       <button id="viewDay">Day</button>
       <button id="viewWeek">Week</button>
       <button id="viewMonth">Month</button>
@@ -90,72 +80,80 @@
 
 <script>
   // Supabase
-  const SUPABASE_URL="https://wjfgntocqjtwaqamlbgc.supabase.co";
-  const SUPABASE_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndqZmdudG9jcWp0d2FxYW1sYmdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzNjQzODIsImV4cCI6MjA3MDk0MDM4Mn0.IRwC5-0cv2rkaZbzR1Ovxnt6dl0m1IwJgcLl2I67YzQ";
+  const SUPABASE_URL = "https://wjfgntocqjtwaqamlbgc.supabase.co";
+  const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndqZmdudG9jcWp0d2FxYW1sYmdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzNjQzODIsImV4cCI6MjA3MDk0MDM4Mn0.IRwC5-0cv2rkaZbzR1Ovxnt6dl0m1IwJgcLl2I67YzQ";
   const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-  let gantt, tasksCache = [];
+  // State (explicit to avoid empty dropdown bugs)
+  const state = { view: 'Week', monthKey: monthKey(new Date()) };
+  const monthSelect = document.getElementById('monthSelect');
   const ganttEl = document.getElementById('gantt');
+  let gantt, tasksCache = [];
 
-  init();
+  // ---- init
+  buildMonthPicker();
+  bindControls();
+  render();
+  supabase.channel('public:tasks')
+    .on('postgres_changes', { event:'*', schema:'public', table:'tasks' }, debounce(render, 200))
+    .subscribe();
 
-  async function init(){
-    buildMonthPicker();
-    await render();
-    supabase.channel("public:tasks")
-      .on("postgres_changes",{event:"*",schema:"public",table:"tasks"},debounce(render,200))
-      .subscribe();
-
-    document.getElementById("viewDay").onclick=()=>{ if(gantt){gantt.change_view_mode("Day"); fixGanttHeight();}};
-    document.getElementById("viewWeek").onclick=()=>{ if(gantt){gantt.change_view_mode("Week"); fixGanttHeight();}};
-    document.getElementById("viewMonth").onclick=()=>{ if(gantt){gantt.change_view_mode("Month"); fixGanttHeight();}};
-    document.getElementById("refreshBtn").onclick=()=>render();
-    document.getElementById("monthSelect").onchange=()=>render();
-    window.addEventListener('resize', () => setTimeout(fixGanttHeight, 60));
+  function bindControls(){
+    document.getElementById('viewDay').onclick   = () => { state.view='Day';   if(gantt) { gantt.change_view_mode('Day');   fixHeight(); } };
+    document.getElementById('viewWeek').onclick  = () => { state.view='Week';  if(gantt) { gantt.change_view_mode('Week');  fixHeight(); } };
+    document.getElementById('viewMonth').onclick = () => { state.view='Month'; if(gantt) { gantt.change_view_mode('Month'); fixHeight(); } };
+    document.getElementById('refreshBtn').onclick = () => render();
+    monthSelect.onchange = () => { state.monthKey = monthSelect.value; render(); };
+    window.addEventListener('resize', () => setTimeout(fixHeight, 60));
   }
 
+  // ---- month dropdown (fixed)
   function buildMonthPicker(){
-    const sel = document.getElementById('monthSelect');
-    sel.innerHTML = '';
+    monthSelect.innerHTML = '';
     const base = new Date(); base.setDate(1);
-    for(let o=-2;o<=9;o++){
-      const d=new Date(base); d.setMonth(d.getMonth()+o);
-      const opt=document.createElement('option');
-      opt.value=`${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,'0')}`;
-      opt.textContent=d.toLocaleString(undefined,{month:'long',year:'numeric'});
-      if(o===0) opt.selected=true;
-      sel.appendChild(opt);
+    for(let o=-2; o<=9; o++){
+      const d = new Date(base); d.setMonth(d.getMonth()+o);
+      const key = monthKey(d);
+      const opt = document.createElement('option');
+      opt.value = key;
+      opt.textContent = d.toLocaleString(undefined, { month:'long', year:'numeric' });
+      if(key === state.monthKey) opt.selected = true;
+      monthSelect.appendChild(opt);
     }
   }
-
-  function getMonthRange(){
-    const [y,m] = document.getElementById('monthSelect').value.split('-').map(Number);
+  function monthKey(d){ return `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,'0')}`; }
+  function rangeFromKey(key){
+    const [y,m] = key.split('-').map(Number);
     return { start:new Date(y,m-1,1), end:new Date(y,m,0,23,59,59,999) };
   }
 
+  // ---- data
   async function fetchTasks(){
     const { data, error } = await supabase.from('tasks').select('*').order('start_date');
     if(error){ console.error(error); return []; }
-    const { start, end } = getMonthRange();
+    const { start, end } = rangeFromKey(state.monthKey);
     return (data||[]).filter(t=>{
       const s=new Date(t.start_date), e=new Date(t.end_date||t.start_date);
       return e>=start && s<=end;
     });
   }
 
+  // ---- draw
   async function render(){
     const rows = await fetchTasks();
     const tasks = rows.map(r=>({
-      id:r.id, name:r.title,
-      start:fmt(r.start_date), end:fmt(r.end_date||r.start_date),
-      progress:Number(r.progress||0),
+      id:r.id,
+      name:r.title,
+      start:toISO(r.start_date),
+      end:toISO(r.end_date || r.start_date),
+      progress:Number(r.progress || 0),
       notes:(r.notes ?? r.description ?? '').trim()
     }));
     tasksCache = tasks;
 
     ganttEl.innerHTML = '';
     gantt = new Gantt('#gantt', tasks, {
-      view_mode: 'Week',
+      view_mode: state.view,
       bar_height: 24,
       padding: 20,
       custom_popup_html: t => `
@@ -166,44 +164,42 @@
         </div>`
     });
 
-    styleBars(tasks);
-    fixGanttHeight(); // <- keep scrollbar at bottom
+    colorAndHover(tasks);
+    fixHeight();   // keep scrollbar pinned low
   }
 
-  // make bars match our semantics; force 100% red using INLINE styles (beats CSS)
-  function styleBars(tasks){
-    const map = Object.fromEntries(tasks.map(t=>[String(t.id),t]));
-    document.querySelectorAll('.gantt .bar-wrapper').forEach(wrap=>{
+  // ---- colors + hover (100% fix uses inline styles)
+  function colorAndHover(tasks){
+    const map = Object.fromEntries(tasks.map(t => [String(t.id), t]));
+
+    document.querySelectorAll('.gantt .bar-wrapper').forEach(wrap => {
       const id = wrap.getAttribute('data-id');
       const t  = map[id];
       const bar  = wrap.querySelector('rect.bar');
       const prog = wrap.querySelector('rect.bar-progress');
       if(!bar) return;
 
-      // base colors
+      // default look
       bar.style.fill = 'var(--ash)';
       if(prog) prog.style.fill = 'var(--beige)';
 
-      // 100% -> turn everything red (inline style)
+      // 100% => hard red (bar + progress) and force overlay width to full
       if(t && t.progress >= 100){
-        bar.style.fill  = 'var(--red)';
+        bar.style.fill = 'var(--red)';
         if(prog){
           prog.style.fill = 'var(--red)';
-          prog.setAttribute('width', bar.getAttribute('width')); // full width
+          prog.setAttribute('width', bar.getAttribute('width'));
         }
       }
 
-      // separator line at progress edge (hide if 0 or 100)
+      // separator line only for 1–99%
       let edge = wrap.querySelector('line.progress-edge');
       if(!edge){
         edge = document.createElementNS('http://www.w3.org/2000/svg','line');
-        edge.setAttribute('class','progress-edge');
-        wrap.appendChild(edge);
+        edge.setAttribute('class','progress-edge'); wrap.appendChild(edge);
       }
-      const bw = parseFloat(bar.getAttribute('width')||'0');
       const pw = prog ? parseFloat(prog.getAttribute('width')||'0') : 0;
-      const showEdge = t && t.progress > 0 && t.progress < 100 && pw > 0;
-      if(showEdge){
+      if(t && t.progress > 0 && t.progress < 100 && pw > 0){
         const x = parseFloat(bar.getAttribute('x')||'0') + pw;
         const y = parseFloat(bar.getAttribute('y')||'0');
         const h = parseFloat(bar.getAttribute('height')||'0');
@@ -214,40 +210,31 @@
         edge.style.display='none';
       }
 
-      // full-bar hover (native tooltip + popup)
+      // full-bar hover tooltip + popup
       let hit = wrap.querySelector('rect.hover-hit');
-      if(!hit){
-        hit = document.createElementNS('http://www.w3.org/2000/svg','rect');
-        hit.setAttribute('class','hover-hit');
-        wrap.appendChild(hit);
-      }
-      ['x','y','width','height','rx','ry'].forEach(a=>{
-        const v = bar.getAttribute(a); if(v!=null) hit.setAttribute(a, v);
-      });
+      if(!hit){ hit = document.createElementNS('http://www.w3.org/2000/svg','rect'); hit.setAttribute('class','hover-hit'); wrap.appendChild(hit); }
+      ['x','y','width','height','rx','ry'].forEach(a=>{ const v = bar.getAttribute(a); if(v!=null) hit.setAttribute(a, v); });
       let old = hit.querySelector('title'); if(old) old.remove();
       const ttl = document.createElementNS('http://www.w3.org/2000/svg','title');
-      ttl.textContent = t ? `${t.name}${t.notes ? ' — ' + t.notes : ''}` : '';
-      hit.appendChild(ttl);
+      ttl.textContent = t ? `${t.name}${t.notes ? ' — ' + t.notes : ''}` : ''; hit.appendChild(ttl);
       hit.onmouseenter = () => { if(gantt && gantt.show_popup) gantt.show_popup(t); };
       hit.onmouseleave = () => { if(gantt && gantt.hide_popup) gantt.hide_popup(); };
     });
   }
 
-  // keep the horizontal scrollbar exactly at the bottom edge
-  function fixGanttHeight(){
+  // ---- keep horizontal scrollbar at bottom
+  function fixHeight(){
     const svg = ganttEl.querySelector('svg');
     if(!svg) return;
-    // prefer bbox height (SVG content), fallback to client height
     let h = 0;
     try{ h = svg.getBBox().height; }catch(e){ h = svg.getBoundingClientRect().height; }
-    // add a small cushion (for axis labels) + scrollbar track
     ganttEl.style.height = Math.ceil(h + 40) + 'px';
   }
 
-  // helpers
-  function fmt(d){ const x=new Date(d); return `${x.getFullYear()}-${String(x.getMonth()+1).padStart(2,'0')}-${String(x.getDate()).padStart(2,'0')}`; }
-  function debounce(fn,wait){ let t; return (...a)=>{ clearTimeout(t); t=setTimeout(()=>fn.apply(this,a),wait); }; }
+  // utils
+  function toISO(d){ const x=new Date(d); return `${x.getFullYear()}-${String(x.getMonth()+1).padStart(2,'0')}-${String(x.getDate()).padStart(2,'0')}`; }
   function escapeHtml(s){ return String(s).replace(/[&<>\"']/g,c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;','\'':'&#039;'}[c])); }
+  function debounce(fn,ms){ let t; return (...a)=>{ clearTimeout(t); t=setTimeout(()=>fn.apply(this,a),ms); }; }
 </script>
 </body>
 </html>
